--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <h1>Odin Recipes:</h1>
+
+    <h2><em>Lasagna</em></h4>
+    <h3><em>Bourbon Chicken</em></h3>    
+    <a href="./recipes/lasagna.html">Click to see Lasagna's recipe</a>
+     <br><br>
+    <a href="./recipes/chicken.html">Click to see our Bourbon chicken recipe </a>
+    
+
 </body>
 </html>
