Third recipe code

--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes:</h1>
-
-    <h2><em>Lasagna</em></h4>
-    <h3><em>Bourbon Chicken</em></h3>    
-    <a href="./recipes/lasagna.html">Click to see Lasagna's recipe</a>
-     <br><br>
-    <a href="./recipes/chicken.html">Click to see our Bourbon chicken recipe </a>
-    
-
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/chicken.html">Chicken</a></li>
+    </ul>
 </body>
 </html>
