--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -5,37 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bourbon Chicken Recipe</title>
 </head>
-<body style="font-family: Arial, sans-serif; line-height: 1.6; margin: 20px;">
+<body>
 
-    <h1 style="color: #444;">Bourbon Chicken Recipe</h1>
+    <h1>Bourbon Chicken Recipe</h1>
     
     <img src="./recipe-images/chicken.jpg" alt="Bourbon Chicken" style="max-width: 100%; height: auto; border-radius: 8px; margin-bottom: 20px;">
 
     <p><em>Bourbon chicken is a dish with New Orleans roots that's easy to make with chicken thigh pieces cooked in a sweet brown sugar, bourbon, ginger, garlic, and soy sauce glaze. Serve with rice for a restaurant-worthy meal.</em></p>
 
-    <h2 style="color: #444;">Ingredients</h2>
-    <ul style="list-style-type: none; padding: 0;">
-        <li style="margin-bottom: 8px;">1 1/2 pounds skinless boneless chicken thighs, cut in 1-inch pieces</li>
-        <li style="margin-bottom: 8px;">2 tablespoons cornstarch, divided</li>
-        <li style="margin-bottom: 8px;">2 tablespoons olive oil, divided</li>
-        <li style="margin-bottom: 8px;">1/4 cup minced onion</li>
-        <li style="margin-bottom: 8px;">2 cloves garlic, minced</li>
-        <li style="margin-bottom: 8px;">1 teaspoon grated fresh ginger</li>
-        <li style="margin-bottom: 8px;">1 tablespoon cider vinegar</li>
-        <li style="margin-bottom: 8px;">2 cups cooked rice</li>
-        <li style="margin-bottom: 8px;">2 green onions, sliced</li>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 1/2 pounds skinless boneless chicken thighs, cut in 1-inch pieces</li>
+        <li>2 tablespoons cornstarch, divided</li>
+        <li>2 tablespoons olive oil, divided</li>
+        <li>1/4 cup minced onion</li>
+        <li>2 cloves garlic, minced</li>
+        <li>1 teaspoon grated fresh ginger</li>
+        <li>1 tablespoon cider vinegar</li>
+        <li>2 cups cooked rice</li>
+        <li>2 green onions, sliced</li>
     </ul>
 
-    <h2 style="color: #444;">Steps</h2>
-    <ol style="list-style-type: none; padding: 0;">
-        <li style="margin-bottom: 8px;">Gather ingredients</li>
-        <li style="margin-bottom: 8px;">Toss chicken with 1 tablespoon cornstarch in a medium bowl.</li>
-        <li style="margin-bottom: 8px;">Heat 1 tablespoon oil in a 12-inch skillet over medium-high heat; add chicken. Cook and stir until browned; transfer to a plate using a slotted spoon.</li>
-        <li style="margin-bottom: 8px;">Heat remaining 1 tablespoon oil in same skillet. Add onion, garlic, and ginger; cook and stir until softened and fragrant, 1 to 3 minutes.</li>
-        <li style="margin-bottom: 8px;">Stir remaining 1 tablespoon cornstarch, soy sauce, broth, bourbon, brown sugar, vinegar, and crushed red pepper together in a small bowl.</li>
-        <li style="margin-bottom: 8px;">Add sauce mixture to skillet; cook and stir until thickened and bubbly.</li>
-        <li style="margin-bottom: 8px;">Return chicken to skillet. Cook and stir until coated in sauce and heated through, about 2 minutes.</li>
-        <li style="margin-bottom: 8px;">Serve over rice. Top with green onions.</li>
+    <h2>Steps</h2>
+    <ol>
+        <li>Gather ingredients</li>
+        <li>Toss chicken with 1 tablespoon cornstarch in a medium bowl.</li>
+        <li>Heat 1 tablespoon oil in a 12-inch skillet over medium-high heat; add chicken. Cook and stir until browned; transfer to a plate using a slotted spoon.</li>
+        <li>Heat remaining 1 tablespoon oil in the same skillet. Add onion, garlic, and ginger; cook and stir until softened and fragrant, 1 to 3 minutes.</li>
+        <li>Stir remaining 1 tablespoon cornstarch, soy sauce, broth, bourbon, brown sugar, vinegar, and crushed red pepper together in a small bowl.</li>
+        <li>Add sauce mixture to the skillet; cook and stir until thickened and bubbly.</li>
+        <li>Return chicken to the skillet. Cook and stir until coated in sauce and heated through, about 2 minutes.</li>
+        <li>Serve over rice. Top with green onions.</li>
     </ol>
 </body>
 </html>
